--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul class="nav">
           <li class="name">Aylin Kirmit</li>
           <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
@@ -39,7 +40,6 @@
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div>
-      <img src="" alt="">
 
     </main>
     <footer>
